Add VSIM integration test & refactor